[NCLSUP-1471] Add a support for LIGHTWELL_UPSTREAM lookups